--- a/public/index.html
+++ b/public/index.html
@@ -3,139 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Ponto - Sua Empresa</title>
+    <title>Login - Sistema de Ponto</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <header>
-        <nav>
-            <h1>⏰ Ponto Eletrônico</h1>
-            <ul>
-                <li><a href="#registrar">Registrar Ponto</a></li>
-                <li><a href="#historico">Meu Histórico</a></li>
-                <li><a href="#sobre">Sobre</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <!-- Seção de Registro de Ponto -->
-        <section id="registrar" class="hero">
-            <div class="container">
-                <div class="ponto-card">
-                    <h2>Registro de Ponto</h2>
-                    
-                    <!-- Informações do Funcionário -->
-                    <div class="funcionario-info">
-                        <div class="info-item">
-                            <span>Funcionário:</span>
-                            <strong id="nome-funcionario">Carregando...</strong>
-                        </div>
-                        <div class="info-item">
-                            <span>Data:</span>
-                            <strong id="data-atual">--/--/----</strong>
-                        </div>
-                        <div class="info-item">
-                            <span>Hora:</span>
-                            <strong id="hora-atual">--:--:--</strong>
-                        </div>
-                    </div>
-
-                    <!-- Botões de Registro -->
-                    <div class="botoes-ponto">
-                        <button id="btn-entrada" class="btn-ponto entrada">
-                            🏢 Entrada
-                        </button>
-                        <button id="btn-saida-almoco" class="btn-ponto saida">
-                            🍽 Saída Almoço
-                        </button>
-                        <button id="btn-retorno-almoco" class="btn-ponto entrada">
-                            ↩ Retorno Almoço
-                        </button>
-                        <button id="btn-saida" class="btn-ponto saida">
-            🏠 Saída
-                        </button>
-                    </div>
-
-                    <!-- Último Registro -->
-                    <div class="ultimo-registro">
-                        <h3>Último Registro:</h3>
-                        <p id="ultimo-registro-texto">Nenhum registro hoje</p>
-                    </div>
-
-                    <!-- Status do Dia -->
-                    <div class="status-dia">
-                        <h3>Status do Dia:</h3>
-                        <div class="status-items">
-                            <div class="status-item">
-                                <span>Entrada:</span>
-                                <span id="status-entrada">--:--</span>
-                            </div>
-                            <div class="status-item">
-                                <span>Almoço Saída:</span>
-                                <span id="status-almoco-saida">--:--</span>
-                            </div>
-                            <div class="status-item">
-                                <span>Almoço Retorno:</span>
-                                <span id="status-almoco-retorno">--:--</span>
-                            </div>
-                            <div class="status-item">
-                                <span>Saída:</span>
-                                <span id="status-saida">--:--</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<body class="auth-page">
+    <div class="auth-container">
+        <div class="auth-card">
+            <div class="auth-header">
+                <h1>⏰ Sistema de Ponto</h1>
+                <p>Faça login para acessar o sistema</p>
             </div>
-        </section>
 
-        <!-- Seção de Histórico -->
-        <section id="historico" class="features">
-            <div class="container">
-                <h2>Meu Histórico</h2>
-                <div class="historico-container">
-                    <div class="filtros">
-                        <input type="month" id="filtro-mes" class="filtro-input">
-                        <button id="btn-exportar" class="btn-secundario">📊 Exportar</button>
-                    </div>
-                    <div class="registros-lista" id="lista-registros">
-                        <p class="sem-registros">Nenhum registro encontrado</p>
-                    </div>
+            <form id="login-form" class="auth-form">
+                <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <input 
+                        type="email" 
+                        id="email" 
+                        name="email" 
+                        required 
+                        placeholder="seu@email.com"
+                    >
                 </div>
-            </div>
-        </section>
 
-        <!-- Seção Sobre -->
-        <section id="sobre" class="sobre">
-            <div class="container">
-                <h2>Sobre o Sistema</h2>
-                <div class="sobre-content">
-                    <div class="sobre-texto">
-                        <h3>Instruções de Uso:</h3>
-                        <ul>
-                            <li>✅ Registre sua entrada ao chegar na empresa</li>
-                            <li>✅ Registre saída para o almoço</li>
-                            <li>✅ Registre retorno do almoço</li>
-                            <li>✅ Registre saída ao final do dia</li>
-                            <li>✅ Consulte seu histórico mensal</li>
-                        </ul>
-                    </div>
-                    <div class="contato-support">
-                        <h3>Suporte</h3>
-                        <p>Problemas com o sistema?</p>
-                        <p>Contate: <strong>RH - (11) 99999-9999</strong></p>
-                    </div>
+                <div class="form-group">
+                    <label for="senha">Senha</label>
+                    <input 
+                        type="password" 
+                        id="senha" 
+                        name="senha" 
+                        required 
+                        placeholder="Sua senha"
+                    >
                 </div>
-            </div>
-        </section>
-    </main>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Sistema de Ponto - Sua Empresa. Todos os direitos reservados.</p>
+                <button type="submit" class="btn-auth">
+                    🚀 Entrar no Sistema
+                </button>
+
+                <div class="auth-links">
+                    <p>Não tem conta? <a href="cadastro.html">Cadastre-se aqui</a></p>
+                </div>
+            </form>
+
+            <div id="mensagem-erro" class="mensagem-erro"></div>
         </div>
-    </footer>
+    </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
