--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bem-vindo</title>
+    <title>Sistema de Ponto</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -14,7 +14,7 @@
         }
 
         body {
-            background-color: #f5f5f5;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -25,9 +25,9 @@
         .container {
             width: 100%;
             max-width: 500px;
-            background-color: white;
-            border-radius: 12px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            background: white;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
             padding: 40px;
             text-align: center;
         }
@@ -66,24 +66,24 @@
         }
 
         .btn-primary {
-            background-color: #3498db;
+            background: #3498db;
             color: white;
         }
 
         .btn-primary:hover {
-            background-color: #2980b9;
+            background: #2980b9;
             transform: translateY(-2px);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .btn-secondary {
-            background-color: #ecf0f1;
+            background: #ecf0f1;
             color: #2c3e50;
             border: 2px solid #bdc3c7;
         }
 
         .btn-secondary:hover {
-            background-color: #d5dbdb;
+            background: #d5dbdb;
             transform: translateY(-2px);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
@@ -106,7 +106,7 @@
 
         .social-icons i:hover {
             color: #3498db;
-            background-color: #f8f9fa;
+            background: #f8f9fa;
             transform: scale(1.1);
         }
 
@@ -128,10 +128,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">Sistema de Pontos</div>
+        <div class="logo">⏰ Sistema de Ponto</div>
         
         <div class="welcome-text">
-            Bem-vindo ao sistema de registro de pontos. Escolha uma opção para continuar.
+            Bem-vindo ao sistema de registro de pontos. 
+            Acesse sua conta ou crie uma nova para começar.
         </div>
         
         <div class="button-group">
