--- a/dashboard.html
+++ b/dashboard.html
@@ -953,30 +953,11 @@
                             <button class="save-btn" onclick="changePassword()">Salvar</button>
                         </div>
                     </div>
-                    
-                    <div class="menu-item" onclick="showSection('localizacao')">
-                        <div class="menu-icon">
-                            <i class="fas fa-map-marker-alt"></i>
-                        </div>
-                        <div>
-                            <div style="font-weight: 500;">Localização</div>
-                            <div style="font-size: 12px; color: var(--gray);">Permissões de geolocalização</div>
-                        </div>
-                    </div>
-                    <div class="menu-item" onclick="showSection('biometria')">
-                        <div class="menu-icon">
-                            <i class="fas fa-fingerprint"></i>
-                        </div>
-                        <div>
-                            <div style="font-weight: 500;">Biometria/Facial</div>
-                            <div style="font-size: 12px; color: var(--gray);">Login com biometria</div>
-                        </div>
-                    </div>
                 </div>
 
-                <!-- Documentos -->
+                <!-- Banco de Horas e Folhas de Ponto -->
                 <div class="profile-section">
-                    <h3 class="section-title">📄 Documentos</h3>
+                    <h3 class="section-title">📊 Relatórios</h3>
                     <div class="menu-item" onclick="showSection('banco-horas')">
                         <div class="menu-icon">
                             <i class="fas fa-clock"></i>
